docs: lectures
